adding some styling

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+
+<head>
+<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <header>
 
     <h1> Sally Hart </h1>
@@ -5,12 +12,13 @@
 
 </header>
 
+
 <section>
 
 </section>
-
 <footer>
     <a href='#'>Email</a>
-    <a href='#'>Twiiter</a>
+    <a href='#'>Twiter</a>
     <a href='#'>Instagram</a>
 </footer>
+</body>
