Added new images and finished the simple webpage

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </header>
 
 
-<section>
+<section class='image_1'></section>
+<section class='image_2'></section>
+<section class='image_3'></section>
+<section class='image_4'></section>
 
-</section>
 <footer>
     <a href='#'>Email</a>
     <a href='#'>Twiter</a>
